# maxine-pipewire

./: .clang-format  .gitignore  LICENSE  PKGBUILD  README.md  meson.build  meson_options.txt
config/: 60-maxine-echo-cancel.conf  com.github.maxine_pipewire.Daemon.service.in  maxine-pipewire.service  maxine-pipewire.toml  maxined.service.in  org.maxine.Effects.conf
doc/: EFFECTS.md
gui/: dbusclient.cpp  dbusclient.h  effectcard.cpp  effectcard.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  statusbar.cpp  statusbar.h
include/: maxine_audio_chain.h  maxine_audio_node.h  maxine_config.h  maxine_dbus.h  maxine_effect_registry.h  maxine_loader.h  maxine_vfx_loader.h  nvafx_types.h  nvvfx_types.h
scripts/: install.sh  setup-sdk.sh
src/: maxctl.c  maxine_audio_chain.c  maxine_audio_node.c  maxine_config.c  maxine_dbus.c  maxine_effect_registry.c  maxine_loader.c  maxine_vfx_loader.c  maxined.c  spa_aec_maxine.c
